--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production babel src -d dist",
     "test": "yarn jest",
+    "security": "yarn nsp check --reporter summary",
     "version": "generate-changelog && git add -A ./CHANGELOG.md"
   },
   "engines": {
@@ -25,6 +26,7 @@
     "babel-preset-env": "^1.6.1",
     "cross-env": "^5.1.3",
     "generate-changelog": "^1.7.0",
-    "jest": "^22.4.2"
+    "jest": "^22.4.2",
+    "nsp": "^3.2.1"
   }
 }
