--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production babel src -d dist",
     "test": "yarn jest",
     "security": "yarn nsp check --reporter summary",
+    "lint": "prettier --trailing-comma es5 --write \"src/*.js\"",
     "version": "generate-changelog && git add -A ./CHANGELOG.md"
   },
   "engines": {
@@ -27,6 +28,7 @@
     "cross-env": "^5.1.3",
     "generate-changelog": "^1.7.0",
     "jest": "^22.4.2",
-    "nsp": "^3.2.1"
+    "nsp": "^3.2.1",
+    "prettier": "1.11.1"
   }
 }
